Unable to align correctly

--- a/css/main.css
+++ b/css/main.css
@@ -13,16 +13,16 @@ a {
 	color: #ffffff;
 }
 
-#images {
-	font-family: 'Open Sans', sans-serif;
-}
-
 #navbar {
 	background-color: #0FB493;
 }
 
 body {
 	font-family: 'Open Sans', sans-serif;
+}
+
+img {
+	max-width: 100%;
 }
 
 /********************
@@ -48,6 +48,51 @@ h2 {
 	margin: -5px 0 0;
 	font-size: 0.9em;
 	font-weight: normal;
+}
+
+/********************
+	GENERAL
+********************/
+
+#wrapper {
+	max-width: 100%;
+	margin: 0 0 0 0;
+	font-family: 'Open Sans', sans-serif;
+}
+
+a {
+	text-decoration: none;
+	color: #ffffff;
+}
+
+#navbar {
+	background-color: #0FB493;
+}
+
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+
+img {
+	max-width: 100%;
+}
+
+/********************
+	PAGE PORTFOLIO
+********************/
+
+#gallery {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+#gallery li {
+	float: right;
+	width: 45%;
+	margin: 2.5%;
+	background-color: #F5F5F5;
+	color: #BDC3C7;
 }
 
 /********************
@@ -111,11 +156,13 @@ nav {
 footer {
 	font-size: 0.75em;
 	text-align: center;
-	padding: 50px 0 0;
+	padding: 0 0 0 0;
 	color: #ccc;
 }
 
-
+footer img {
+	padding: none;
+}
 
 
 
